--- a/Start/App.config
+++ b/Start/App.config
@@ -1,6 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Start.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
     </startup>
+    <applicationSettings>
+        <Start.Properties.Settings>
+            <setting name="Path" serializeAs="String">
+                <value>C:\Users\Besitzer\Desktop\Zeitabrechnung\20171030_work_logs.csv</value>
+            </setting>
+        </Start.Properties.Settings>
+    </applicationSettings>
 </configuration>
