Work in progress: Results are shown.

--- a/Start/App.config
+++ b/Start/App.config
@@ -11,7 +11,10 @@
     <applicationSettings>
         <Start.Properties.Settings>
             <setting name="Path" serializeAs="String">
-                <value>C:\Users\Besitzer\Desktop\Zeitabrechnung\20171030_work_logs.csv</value>
+                <value>C:\Users\chrdrcur\Desktop\CSV\20171107_work_logs.csv</value>
+            </setting>
+            <setting name="Ungültig" serializeAs="String">
+                <value>17625</value>
             </setting>
         </Start.Properties.Settings>
     </applicationSettings>
