Reporter class created. Moved functionality to this class according to responsibility. Refactoring.

--- a/Start/App.config
+++ b/Start/App.config
@@ -13,7 +13,7 @@
             <setting name="Path" serializeAs="String">
                 <value>C:\Users\chrdrcur\Desktop\CSV\20171107_work_logs.csv</value>
             </setting>
-            <setting name="Ungültig" serializeAs="String">
+            <setting name="Invalid" serializeAs="String">
                 <value>17625</value>
             </setting>
         </Start.Properties.Settings>
