--- a/DataReader/DataReader.csproj
+++ b/DataReader/DataReader.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Reader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reporter.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
