--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{EE25872A-06A8-486F-AE0D-EC021E602A93}</ProjectGuid>
+    <ProjectGuid>{7FA4416A-750A-4BC4-89A0-284C14F98A77}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DataReader</RootNamespace>
-    <AssemblyName>DataReader</AssemblyName>
+    <RootNamespace>Data</RootNamespace>
+    <AssemblyName>Data</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -43,10 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ICRUD.cs" />
-    <Compile Include="Reader.cs" />
+    <Compile Include="CRUD.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Reporter.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DataReader\DataReader.csproj">
+      <Project>{ee25872a-06a8-486f-ae0d-ec021e602a93}</Project>
+      <Name>DataReader</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
