--- a/Start/App.config
+++ b/Start/App.config
@@ -11,7 +11,7 @@
     <applicationSettings>
         <Start.Properties.Settings>
             <setting name="Path" serializeAs="String">
-                <value>C:\Users\chrdrcur\Desktop\CSV\20171107_work_logs.csv</value>
+                <value>C:\Users\Besitzer\Desktop\20170830_work_logs.csv</value>
             </setting>
             <setting name="Invalid" serializeAs="String">
                 <value>17625</value>
