--- a/Start/Properties/Settings.settings
+++ b/Start/Properties/Settings.settings
@@ -3,7 +3,7 @@
   <Profiles />
   <Settings>
     <Setting Name="Path" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">C:\Users\chrdrcur\Desktop\CSV\20171107_work_logs.csv</Value>
+      <Value Profile="(Default)">C:\Users\Besitzer\Desktop\20170830_work_logs.csv</Value>
     </Setting>
     <Setting Name="Invalid" Type="System.String" Scope="Application">
       <Value Profile="(Default)">17625</Value>
