--- a/DataReader/DataReader.csproj
+++ b/DataReader/DataReader.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ICRUD.cs" />
+    <Compile Include="PersistancManager.cs" />
     <Compile Include="Reader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reporter.cs" />
